--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "main": "checkISBN.js",
   "scripts": {
     "test": "jest"
-    
   },
   "jest": {
     "verbose": true,
@@ -16,9 +15,11 @@
   "dependencies": {
     "axios": "^0.21.1",
     "cheerio": "^1.0.0-rc.10",
+    "color-thief-node": "^1.0.4",
     "dns": "^0.2.2",
-    "lazy-ass": "^1.6.0",
+    "fs": "^0.0.1-security",
+    "jimp": "^0.16.1",
     "node-image-downloader": "^1.0.7",
-    "test-mole": "^0.2.0"
+    "tippy.js": "^6.2.5"
   }
 }
